--- a/package.json
+++ b/package.json
@@ -30,10 +30,11 @@
         "test:build": "turbo test:build",
         "test:unit": "turbo test:unit",
         "changeset": "changeset",
-        "changeset:version": "changeset version",
+        "changeset:version": "changeset version && bun update",
         "changeset:version:full": "bun run changeset:version && bun run --filter @towns-protocol/react-sdk gen && ./packages/generated/scripts/copy-addresses.sh",
         "changeset:version:no-docgen": "bun run changeset:version && ./packages/generated/scripts/copy-addresses.sh",
-        "changeset:publish": "changeset publish"
+        "changeset:publish": "bun run changeset:publish:packages && changeset tag",
+        "changeset:publish:packages": "for dir in packages/*/; do (cd \"$dir\" && [ -f package.json ] && [ \"$(bun pm pkg get private)\" = \"{}\" ] && bun publish || true); done"
     },
     "dependencies": {
         "pino-pretty": "^13.0.0"
