ci: use bun publish in publish to npm workflow (#4861)

--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
         "test:build": "turbo test:build",
         "test:unit": "turbo test:unit",
         "changeset": "changeset",
-        "changeset:version": "changeset version",
+        "changeset:version": "changeset version && bun update",
         "changeset:version:full": "bun run changeset:version && bun run --filter @towns-protocol/react-sdk gen && ./packages/generated/scripts/copy-addresses.sh",
         "changeset:version:no-docgen": "bun run changeset:version && ./packages/generated/scripts/copy-addresses.sh",
-        "changeset:publish": "changeset publish"
+        "changeset:publish": "./scripts/publish-packages.sh && changeset tag"
     },
     "dependencies": {
         "pino-pretty": "^13.0.0"
