--- a/.github/workflows/Subgraph_service_continuous_deployment.yml
+++ b/.github/workflows/Subgraph_service_continuous_deployment.yml
@@ -9,9 +9,8 @@ on:
                 type: choice
                 options:
                     - alpha
-                    - beta
                     - omega
-                default: beta
+                default: alpha
             docker_image_tag:
                 description: 'The tag to use for the Docker image'
                 required: true
@@ -58,7 +57,7 @@ jobs:
                   if [ -n "$ENVIRONMENT_NAME_INPUT" ]; then
                     ENV_NAME=$ENVIRONMENT_NAME_INPUT
                   elif [ $BRANCH_NAME = "refs/heads/main" ]; then
-                    ENV_NAME="beta"
+                    ENV_NAME="alpha"
                   else
                       echo "Error: Could not determine environment name. Exiting."
                       exit 1
